# winograd

./: LICENSE  README.md  stack.yaml  winograd.cabal
src/: Winograd.hs
src/Winograd/: Matrix.hs  Vector.hs
test/: Spec.hs
test/Spec/: Common.hs  Matrix.hs  Vector.hs
