name:
  winograd

version:
  0.1.0

synopsis:
  A library of fancy matrix multiplication algorithms

homepage:
  https://github.com/spkirich/winograd#readme

license:
  BSD3

license-file:
  LICENSE

author:
  Sergey Kirichenko

maintainer:
  spkirich@gmail.com

copyright:
  2022 Sergey Kirichenko

category:
  Matrix

build-type:
  Simple

extra-source-files:
  README.md

cabal-version:
  >= 1.10

library

  hs-source-dirs:
    src

  exposed-modules:
      Winograd
    , Winograd.Vector

  build-depends:
      base             >= 4.7  && < 5
    , template-haskell >= 2.17 && < 3

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

test-suite winograd-test

    type:
        exitcode-stdio-1.0

    hs-source-dirs:
        test

    main-is:
        Spec.hs

    build-depends:
        base       >= 4.7  && < 5
      , hspec      >= 2.8  && < 3
      , QuickCheck >= 2.14 && < 3
      , winograd

    default-language:
      Haskell2010

source-repository head

  type:
    git

  location:
    https://github.com/spkirich/winograd
